--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -22,6 +22,8 @@ jobs:
       with:
         elixir-version: '1.10.3' # Define the elixir version [required]
         otp-version: '22.3' # Define the OTP version [required]
+    - name: Install inotify-tools
+      run: sudo apt install inotify-tools
     - name: Restore dependencies cache
       uses: actions/cache@v2
       with:
