--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -7,6 +7,7 @@ on:
     branches: [ master ]
 
 env:
+  MIX_ENV: test
   JOB_FILE: jobs.example.json
 
 jobs:
@@ -37,5 +38,7 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Check formatting
+      run: mix format --check-formatted
     - name: Run tests
       run: mix test
