--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -40,5 +40,7 @@ jobs:
       run: mix deps.get
     - name: Check formatting
       run: mix format --check-formatted
+    - name: Run Credo
+      run: mix credo
     - name: Run tests
       run: mix test
