--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -38,6 +38,8 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Compile dependencies
+      run: mix deps.compile
     - name: Check formatting
       run: mix format --check-formatted
     - name: Run Credo
